# barsystem

./: .env.example  .gitignore  COMMIT_MSG.txt  Dockerfile  app.py  barsystem.db  config.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  license.txt  manage.py  models.py  pyproject.toml  readme.md  requirements.txt  test.py
barsystem/: asgi.py  settings.py  urls.py  wsgi.py
blueprints/: admin.py  auth.py  bar.py  ranking.py
blueprints/admin/: __init__.py  abrechnung.py  artikel.py  aussendungen.py  berichte.py  buchungen.py  guthaben.py  mitglied.py
migrations/versions/: 1f59ca56b8c8_.py  385eaa1a2172_.py  4e85cb2d69cc_.py  581aceceb5d5_.py  6b86097926f6_.py  7906e1e0673b_.py  7f78089fca3f_re_add_password_methods_to_user_model.py  938e1a5fbb17_.py  aece232edc17_.py  b1c2d3e4f5a6_.py  b5cd8c46b9a3_final_relationship_fix_and_.py  bb144a1ba52d_remove_transaktion_model_use_buchung_.py  c2d3e4f5a6b7_.py  d3e4f5a6b7c8_.py  e4f5a6b7c8d9_.py  f5a6b7c8d9e0_.py
static/css/: style.css
stricherl_liste/: apps.py
templates/: admin.html  artikel_bearbeiten.html  bar_interface.html  base.html  berichte.html  buchungshistorie.html  login.html  mitglied_bearbeiten.html  top_verkaeufer.html
templates/admin/: add_guthaben.html  admin.html  admin_export.html  admin_mitglieder.html  admin_produkte.html  artikel_bearbeiten.html  aufladen.html  aussendungen.html  buchungshistorie.html  change_password.html  guthaben.html  mitglied_bearbeiten.html  top_verkaeufer.html
test_data/: example_users.xlsx
utils/: admin.py  auto_aufbuchung.py  brevo.py
(+13 files in other folders)
