[project]
name = "barsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.4",
    "blinker==1.9.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "flask==3.1.1",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.14.1",
    "werkzeug==3.1.3",
    "xlsxwriter>=3.2.9",
]
